Fixed some layout bugs.

--- a/inc/template/admin/css/ka.login.css
+++ b/inc/template/admin/css/ka.login.css
@@ -84,7 +84,7 @@
 
 .ka-login-logo {
     position: absolute;
-    top: -170px;
+    top: -155px;
     left: -100px;
 }
 
